--- a/.github/workflows/test-build-deploy.yml
+++ b/.github/workflows/test-build-deploy.yml
@@ -91,6 +91,45 @@ jobs:
           name: SlopeCraftR-dev-source-${{ github.sha }}
           path: ./
 
+  build-binaries:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    name: Build Executable Binaries on ${{ matrix.os }}
+    needs: test
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: pip-${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            pip-${{ runner.os }}-${{ env.cache-name }}-
+            pip-${{ runner.os }}-
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pyinstaller
+
+      - name: Create Distribution
+        run: |
+          pyinstaller -c -F -p . SlopeCraftR-CLI.py
+          pyinstaller -w -F -p . SlopeCraftR-GUI.py
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: SlopeCraftR-Executable-Binaries-${{ matrix.os }}-${{ github.sha }}
+          path: dist/
+
   pypi-upload:
     runs-on: ubuntu-latest
     name: Make and Upload a Package to (Test)PyPI
